src/main/java/com/tc/reactor/support/languages/hsl/syntaxchecker/HslParser.java
// Generated from C:/Users/TarunChapman/IdeaProjects/reactor/src/main/java/com/tc/reactor/support/languages/hsl/syntaxchecker/Hsl.g4 by ANTLR 4.13.2
package com.tc.reactor.support.languages.hsl.syntaxchecker;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, NEWLINE=7, WHITE_SPACE=8, 
		SPACE=9, COMMENT=10, STRING_LEX=11, COLON=12, BINARY_OPERATOR=13, UNARY_OPERATOR=14, 
		SEMICOLON=15, LBRACE=16, RBRACE=17, LPAREN=18, RPAREN=19, PERIOD=20, LSQUARE=21, 
		RSQUARE=22, COMMA=23, AMPERSAND=24, NUMBER_LEX=25, HEX_LEX=26, CRLF=27, 
		DEBUG=28, ECHO=29, INCLUDE=30, DEFINE=31, IFDEF=32, IFNDEF=33, ENDIF=34, 
		PRAGMA=35, ONCE=36, GLOBAL=37, BREAK=38, RETURN=39, ABORT=40, PAUSE=41, 
		ONERROR=42, GOTO=43, RESUME=44, NEXT=45, LOCK=46, UNLOCK=47, SYNCHRONIZED=48, 
		PRIVATE=49, STATIC=50, CONST=51, VARIABLE=52, SEQUENCE=53, STRING=54, 
		DEVICE=55, RESOURCE=56, DIALOG=57, OBJECT=58, TIMER=59, EVENT=60, FILE=61, 
		FUNCTION=62, METHOD=63, STRUCT=64, CHAR=65, SHORT=66, LONG=67, FLOAT=68, 
		VOID=69, IF=70, ELSE=71, WHILE=72, FOR=73, LOOP=74, NAMESPACE=75, ID_LEX=76;
	public static final int
		RULE_hslFile = 0, RULE_statementList = 1, RULE_controlLine = 2, RULE_statement = 3, 
		RULE_simpleStatement = 4, RULE_compoundStatement = 5, RULE_flowControlStatement = 6, 
		RULE_controlStatement = 7, RULE_functionDefinition = 8, RULE_formalList = 9, 
		RULE_declaration = 10, RULE_declSpecifiers = 11, RULE_namespaceDefinition = 12, 
		RULE_structure = 13, RULE_array = 14, RULE_tagDeclarationList = 15, RULE_tagDeclaration = 16, 
		RULE_varDec = 17, RULE_storage = 18, RULE_returnType = 19, RULE_errorHandler = 20, 
		RULE_assignmentExpression = 21, RULE_sequenceExpression = 22, RULE_stringExpression = 23, 
		RULE_deviceExpression = 24, RULE_resourceExpression = 25, RULE_dialogExpression = 26, 
		RULE_objectExpression = 27, RULE_arrayExpression = 28, RULE_timerExpression = 29, 
		RULE_eventExpression = 30, RULE_fileExpression = 31, RULE_functionCall = 32, 
		RULE_expression = 33, RULE_argumentList = 34, RULE_leftExpr = 35, RULE_rightExpr = 36, 
		RULE_atom = 37, RULE_ifStatement = 38, RULE_iterationStatement = 39, RULE_optInitExpression = 40, 
		RULE_optExpression = 41, RULE_optForExpression = 42, RULE_functionReference = 43, 
		RULE_bindings = 44, RULE_sequenceId = 45, RULE_deviceId = 46, RULE_resourceId = 47, 
		RULE_dialogId = 48, RULE_objectId = 49, RULE_arrayId = 50, RULE_timerId = 51, 
		RULE_eventId = 52, RULE_fileId = 53, RULE_stringId = 54, RULE_funcId = 55, 
		RULE_protoId = 56, RULE_typeId = 57, RULE_namespaceId = 58, RULE_constant = 59, 
		RULE_cString = 60, RULE_id = 61, RULE_declSpecifier = 62, RULE_type = 63, 
		RULE_parameter = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"hslFile", "statementList", "controlLine", "statement", "simpleStatement", 
			"compoundStatement", "flowControlStatement", "controlStatement", "functionDefinition", 
			"formalList", "declaration", "declSpecifiers", "namespaceDefinition", 
			"structure", "array", "tagDeclarationList", "tagDeclaration", "varDec", 
			"storage", "returnType", "errorHandler", "assignmentExpression", "sequenceExpression", 
			"stringExpression", "deviceExpression", "resourceExpression", "dialogExpression", 
			"objectExpression", "arrayExpression", "timerExpression", "eventExpression", 
			"fileExpression", "functionCall", "expression", "argumentList", "leftExpr", 
			"rightExpr", "atom", "ifStatement", "iterationStatement", "optInitExpression", 
			"optExpression", "optForExpression", "functionReference", "bindings", 
			"sequenceId", "deviceId", "resourceId", "dialogId", "objectId", "arrayId", 
			"timerId", "eventId", "fileId", "stringId", "funcId", "protoId", "typeId", 
			"namespaceId", "constant", "cString", "id", "declSpecifier", "type", 
			"parameter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'0'", "'<<'", "'+'", "'++'", "'--'", null, null, null, 
			null, null, "':'", null, null, "';'", "'{'", "'}'", "'('", "')'", "'.'", 
			"'['", "']'", "','", "'&'", null, null, "'\\r\\n'", "'debug'", "'echo'", 
			"'#include '", "'#define '", "'#ifdef '", "'#ifndef '", "'#endif'", "'pragma'", 
			"'once'", "'global '", "'break'", "'return'", "'abort'", "'pause'", "'onerror'", 
			"'goto'", "'resume'", "'next'", "'lock'", "'unlock'", "'synchronized'", 
			"'private '", "'static '", "'const '", null, null, null, null, null, 
			null, null, null, null, null, null, "'method'", "'struct'", "'char'", 
			"'short'", "'long'", "'float'", "'void '", "'if'", "'else'", "'while'", 
			"'for'", "'loop'", "'namespace '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "NEWLINE", "WHITE_SPACE", "SPACE", 
			"COMMENT", "STRING_LEX", "COLON", "BINARY_OPERATOR", "UNARY_OPERATOR", 
			"SEMICOLON", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "PERIOD", "LSQUARE", 
			"RSQUARE", "COMMA", "AMPERSAND", "NUMBER_LEX", "HEX_LEX", "CRLF", "DEBUG", 
			"ECHO", "INCLUDE", "DEFINE", "IFDEF", "IFNDEF", "ENDIF", "PRAGMA", "ONCE", 
			"GLOBAL", "BREAK", "RETURN", "ABORT", "PAUSE", "ONERROR", "GOTO", "RESUME", 
			"NEXT", "LOCK", "UNLOCK", "SYNCHRONIZED", "PRIVATE", "STATIC", "CONST", 
			"VARIABLE", "SEQUENCE", "STRING", "DEVICE", "RESOURCE", "DIALOG", "OBJECT", 
			"TIMER", "EVENT", "FILE", "FUNCTION", "METHOD", "STRUCT", "CHAR", "SHORT", 
			"LONG", "FLOAT", "VOID", "IF", "ELSE", "WHILE", "FOR", "LOOP", "NAMESPACE", 
			"ID_LEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HslFileContext extends ParserRuleContext {
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(HslParser.EOF, 0); }
		public HslFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hslFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).enterHslFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).exitHslFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HslVisitor ) return ((HslVisitor<? extends T>)visitor).visitHslFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HslFileContext hslFile() throws RecognitionException {
		HslFileContext _localctx = new HslFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_hslFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			statementList();
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ControlLineContext> controlLine() {
			return getRuleContexts(ControlLineContext.class);
		}
		public ControlLineContext controlLine(int i) {
			return getRuleContext(ControlLineContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).exitStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HslVisitor ) return ((HslVisitor<? extends T>)visitor).visitStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 5503354695227557896L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7007L) != 0)) {
				{
				setState(135);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
				case STRING_LEX:
				case UNARY_OPERATOR:
				case LPAREN:
				case NUMBER_LEX:
				case GLOBAL:
				case BREAK:
				case RETURN:
				case ABORT:
				case PAUSE:
				case ONERROR:
				case RESUME:
				case LOCK:
				case UNLOCK:
				case SYNCHRONIZED:
				case PRIVATE:
				case STATIC:
				case CONST:
				case VARIABLE:
				case STRING:
				case OBJECT:
				case TIMER:
				case FUNCTION:
				case STRUCT:
				case CHAR:
				case SHORT:
				case LONG:
				case FLOAT:
				case IF:
				case WHILE:
				case FOR:
				case NAMESPACE:
				case ID_LEX:
					{
					setState(133);
					statement();
					}
					break;
				case DEBUG:
				case ECHO:
				case INCLUDE:
				case DEFINE:
				case IFDEF:
				case IFNDEF:
				case ENDIF:
				case PRAGMA:
					{
					setState(134);
					controlLine();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControlLineContext extends ParserRuleContext {
		public TerminalNode DEBUG() { return getToken(HslParser.DEBUG, 0); }
		public TerminalNode NUMBER_LEX() { return getToken(HslParser.NUMBER_LEX, 0); }
		public TerminalNode SEMICOLON() { return getToken(HslParser.SEMICOLON, 0); }
		public TerminalNode ECHO() { return getToken(HslParser.ECHO, 0); }
		public TerminalNode INCLUDE() { return getToken(HslParser.INCLUDE, 0); }
		public CStringContext cString() {
			return getRuleContext(CStringContext.class,0);
		}
		public TerminalNode DEFINE() { return getToken(HslParser.DEFINE, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode IFDEF() { return getToken(HslParser.IFDEF, 0); }
		public TerminalNode IFNDEF() { return getToken(HslParser.IFNDEF, 0); }
		public TerminalNode ENDIF() { return getToken(HslParser.ENDIF, 0); }
		public TerminalNode PRAGMA() { return getToken(HslParser.PRAGMA, 0); }
		public TerminalNode ONCE() { return getToken(HslParser.ONCE, 0); }
		public TerminalNode GLOBAL() { return getToken(HslParser.GLOBAL, 0); }
		public ControlLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).enterControlLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).exitControlLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HslVisitor ) return ((HslVisitor<? extends T>)visitor).visitControlLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlLineContext controlLine() throws RecognitionException {
		ControlLineContext _localctx = new ControlLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_controlLine);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEBUG:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(DEBUG);
				setState(141);
				match(T__0);
				setState(142);
				match(NUMBER_LEX);
				setState(143);
				match(SEMICOLON);
				}
				break;
			case ECHO:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(ECHO);
				setState(145);
				match(T__0);
				setState(146);
				match(NUMBER_LEX);
				setState(147);
				match(SEMICOLON);
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				match(INCLUDE);
				setState(149);
				cString();
				}
				break;
			case DEFINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				match(DEFINE);
				setState(151);
				id();
				setState(152);
				constant();
				setState(153);
				match(SEMICOLON);
				}
				break;
			case IFDEF:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				match(IFDEF);
				setState(156);
				id();
				setState(157);
				match(SEMICOLON);
				}
				break;
			case IFNDEF:
				enterOuterAlt(_localctx, 6);
				{
				setState(159);
				match(IFNDEF);
				setState(160);
				id();
				setState(161);
				match(SEMICOLON);
				}
				break;
			case ENDIF:
				enterOuterAlt(_localctx, 7);
				{
				setState(163);
				match(ENDIF);
				setState(164);
				match(SEMICOLON);
				}
				break;
			case PRAGMA:
				enterOuterAlt(_localctx, 8);
				{
				setState(165);
				match(PRAGMA);
				setState(166);
				_la = _input.LA(1);
				if ( !(_la==ONCE || _la==GLOBAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(167);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(HslParser.SEMICOLON, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public FlowControlStatementContext flowControlStatement() {
			return getRuleContext(FlowControlStatementContext.class,0);
		}
		public ControlStatementContext controlStatement() {
			return getRuleContext(ControlStatementContext.class,0);
		}
		public ErrorHandlerContext errorHandler() {
			return getRuleContext(ErrorHandlerContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HslVisitor ) return ((HslVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				simpleStatement();
				setState(171);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				compoundStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				flowControlStatement();
				setState(175);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				controlStatement();
				setState(178);
				match(SEMICOLON);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(180);
				errorHandler();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends ParserRuleContext {
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public SequenceExpressionContext sequenceExpression() {
			return getRuleContext(SequenceExpressionContext.class,0);
		}
		public StringExpressionContext stringExpression() {
			return getRuleContext(StringExpressionContext.class,0);
		}
		public DeviceExpressionContext deviceExpression() {
			return getRuleContext(DeviceExpressionContext.class,0);
		}
		public ResourceExpressionContext resourceExpression() {
			return getRuleContext(ResourceExpressionContext.class,0);
		}
		public DialogExpressionContext dialogExpression() {
			return getRuleContext(DialogExpressionContext.class,0);
		}
		public ObjectExpressionContext objectExpression() {
			return getRuleContext(ObjectExpressionContext.class,0);
		}
		public ArrayExpressionContext arrayExpression() {
			return getRuleContext(ArrayExpressionContext.class,0);
		}
		public TimerExpressionContext timerExpression() {
			return getRuleContext(TimerExpressionContext.class,0);
		}
		public EventExpressionContext eventExpression() {
			return getRuleContext(EventExpressionContext.class,0);
		}
		public FileExpressionContext fileExpression() {
			return getRuleContext(FileExpressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionReferenceContext functionReference() {
			return getRuleContext(FunctionReferenceContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HslListener ) ((HslListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HslVisitor ) return ((HslVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleStatement);
		try {
			setState(198);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				assignmentExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				sequenceExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(185);
				stringExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(186);
				deviceExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(187);
				resourceExpression();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(188);
				dialogExpression();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(189);
				objectExpression();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(190);
				arrayExpression();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(191);
				timerExpression();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(192);
				eventExpression();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(193);
				fileExpression();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(194);
				expression();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(195);
				declaration();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(196);
				functionReference();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(197);
				functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
